# macroscope

./: .gitignore  CONSTRAINTS.md  README.md  discovery.md  package-lock.json  package.json
.github/workflows/: trigger-landing-deploy.yml
docs/: ARCHITECTURE.md  AUDIT_v0.1.0.md
release/: README.md  latest.json.template
scripts/: README.md  generate-icons.mjs  release.sh  update.sh
src/: App.tsx  i18n.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: app-lifecycle-audit.md  disk-audit.md  file-inventory-audit.md  project-artifacts-audit.md  security-audit.md
src-tauri/src/: analyzer.rs  db.rs  error.rs  executor.rs  finding.rs  keychain.rs  lib.rs  main.rs  provider_config.rs
src-tauri/src/analyzer/: mod.rs
src-tauri/src/analyzer/providers/: anthropic_api.rs  claude_cli.rs  gemini.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/identity/: aliases.rs  mod.rs  resolver.rs  system_managed.rs  target_resolver.rs
src-tauri/src/snapshot/: apps.rs  disk.rs  kernel.rs  large_files.rs  mod.rs  network.rs  persistence.rs  processes.rs  project_artifacts.rs  users.rs
src/components/: ActionRow.tsx  AnalysisProgress.tsx  ExecuteDialog.tsx  FindingCard.tsx  HeroMetrics.tsx  MacroscopeLogo.tsx  PreviewDialog.tsx  RowActions.tsx  TabBar.tsx  TopBar.tsx
src/components/onboarding/: PermissionsStep.tsx
src/components/settings/: AIProviderSection.tsx  PermissionsSection.tsx  ProjectRootsSection.tsx  SectionWrapper.tsx  SystemAuditSection.tsx
src/components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  checkbox.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  scroll-area.tsx  separator.tsx  tabs.tsx  tooltip.tsx
src/context/: AnalysisRunContext.tsx
src/hooks/: useTauriEvent.ts
src/lib/: persistence.ts  settings.ts  system-probes.ts
src/locales/en/: common.json  findings.json  onboarding.json  settings.json  tabs.json
src/locales/tr/: common.json  findings.json  onboarding.json  settings.json  tabs.json
src/pages/: Dashboard.tsx  Onboarding.tsx  Settings.tsx
src/pages/tabs/: AppsTab.tsx  FilesTab.tsx  FindingsTab.tsx  OverviewTab.tsx  SecurityTab.tsx  StartupTab.tsx
src/styles/: README.md  tokens.css
src/types/: finding.ts  provider.ts  settings.ts  snapshot.ts
