[package]
name = "macroscope"
version = "0.1.0"
description = "Macroscope — local macOS system snapshot and analysis tool"
authors = ["Orkun Kurul"]
edition = "2021"

[lib]
name = "macroscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
