[package]
name = "macroscope"
version = "0.2.1"
description = "Macroscope — local macOS system snapshot and analysis tool"
authors = ["Orkun Kurul"]
license = "AGPL-3.0"
repository = "https://github.com/Razortype/macroscope"
homepage = "https://github.com/Razortype/macroscope"
edition = "2021"

[lib]
name = "macroscope_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-window-state = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
trash = "5"
globset = "0.4"
walkdir = "2"
libc = "0.2"
async-trait = "0.1"
keyring = "2"
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
